--- a/gb/20/8/14/n12330812.md
+++ b/gb/20/8/14/n12330812.md
@@ -1,14 +1,14 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/alniap312/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/alniap312/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/alniap312/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/alniap312/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/alniap312/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/alniap312/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/alniap312/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/alniap312/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/alniap312/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/alniap312/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/alniap312/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/alniap312/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/alniap312/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/alniap312/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/alniap312/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/alniap312/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/alniap312/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/alniap312/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/alniap312/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/alniap312/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/alniap312/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/alniap312/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/alniap312/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/alniap312/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/alniap312/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/alniap312/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/alniap312/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/alniap312/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/alniap312/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/alniap312/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/alniap312/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/alniap312/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/alniap312/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/alniap312/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/alniap312/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/alniap312/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/alniap312/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/alniap312/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/alniap312/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/alniap312/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/alniap312/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/alniap312/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/alniap312/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/alniap312/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/alniap312/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/alniap312/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/alniap312/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hxcaik307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>五个技巧为学习加速</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2020/08/Fotolia_122127595_Subscription_L-600x400.jpg" />
 <h6>人的一生都在学习，无论你所学的课程或专业是什么，你都需要掌握一些学习技巧，而这些技能将使你成为一名合格的学习者。（Fotolia）
 </h6>
 <hr>
 <p>【大纪元2020年08月14日讯】（大纪元记者温婧澳洲悉尼编译报导）要学的东西实在太多，什么时候才能学完啊？事实上，人的一生都在学习，而学校只是一个开始。不论你毕业后从事什么工作，学习都将成为工作的一部分。</p>
-<p>无论你所学的课程或专业是什么，你都需要掌握一些<ahref="https://github.com/alniap312/djy/blob/master/gb/tag/%E5%AD%A6%E4%B9%A0%E6%8A%80%E5%B7%A7.md#1">学习技巧</a>，而这些技能将使你成为一名合格的学习者。不要以为学习技巧只关乎于在学校里的表现。离开学校后，扎实的<ahref="https://github.com/alniap312/djy/blob/master/gb/tag/%E5%AD%A6%E4%B9%A0%E8%83%BD%E5%8A%9B.md#1">学习能力</a>和技巧将更加有用。</p>
-<p>肯特州立大学（Kent State University）的邓洛斯基（John Dunlosky）及其合作者研究了大量有关十种不同学习技能的文献，他们的论文发表在《公共利益心理学》（Psychological Science in the Public Interes）上。邓洛斯基发现，大约一半的<ahref="https://github.com/alniap312/djy/blob/master/gb/tag/%E5%AD%A6%E4%B9%A0%E6%8A%80%E5%B7%A7.md#1">学习技巧</a>效果不佳。而另一半有效的五种学习技巧包括：</p>
+<p>无论你所学的课程或专业是什么，你都需要掌握一些<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%AD%A6%E4%B9%A0%E6%8A%80%E5%B7%A7.md#1">学习技巧</a>，而这些技能将使你成为一名合格的学习者。不要以为学习技巧只关乎于在学校里的表现。离开学校后，扎实的<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%AD%A6%E4%B9%A0%E8%83%BD%E5%8A%9B.md#1">学习能力</a>和技巧将更加有用。</p>
+<p>肯特州立大学（Kent State University）的邓洛斯基（John Dunlosky）及其合作者研究了大量有关十种不同学习技能的文献，他们的论文发表在《公共利益心理学》（Psychological Science in the Public Interes）上。邓洛斯基发现，大约一半的<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%AD%A6%E4%B9%A0%E6%8A%80%E5%B7%A7.md#1">学习技巧</a>效果不佳。而另一半有效的五种学习技巧包括：</p>
 <ul>
 <li>阐述性调查：详细描述为什么某个事实是真实的；</li>
 <li>自我解释：解释你对一段文字或一个示例问题的理解；</li>
@@ -36,48 +36,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/alniap312/djy/blob/master/gb/9/12/26/n2766491.md#1">“天才”的秘密</a></li>
-<li><a href="https://github.com/alniap312/djy/blob/master/gb/15/3/26/n4396644.md#1">自主学习能力 社会核心的竞争力</a></li>
-<li><a href="https://github.com/alniap312/djy/blob/master/gb/16/12/30/n8646217.md#1">十个技巧 有效提升记忆力</a></li>
-<li><a href="https://github.com/alniap312/djy/blob/master/gb/18/4/13/n10299340.md#1">天才儿童更需经历失败</a></li>
-<li><a href="https://github.com/alniap312/djy/blob/master/gb/18/8/6/n10618136.md#1">在线课程：九个学习技巧</a></li>
-<li><a href="https://github.com/alniap312/djy/blob/master/gb/19/5/16/n11262814.md#1">家庭作业并非多多益善</a></li>
-<li><a href="https://github.com/alniap312/djy/blob/master/gb/19/5/23/n11274794.md#1">学习努力成绩差 试试提取练习法</a></li>
-<li><a href="https://github.com/alniap312/djy/blob/master/gb/20/4/6/n12006625.md#1">五大实用策略 激励孩子学习兴趣</a></li>
-<li><a href="https://github.com/alniap312/djy/blob/master/gb/20/4/26/n12062614.md#1">成就顶尖人才 要的不只是名牌大学</a></li>
-<li><a href="https://github.com/alniap312/djy/blob/master/gb/20/8/13/n12327471.md#1">大学第一年挂科一半 高教贷款资格将被取消</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/12/26/n2766491.md#1">“天才”的秘密</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/3/26/n4396644.md#1">自主学习能力 社会核心的竞争力</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/12/30/n8646217.md#1">十个技巧 有效提升记忆力</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/4/13/n10299340.md#1">天才儿童更需经历失败</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/6/n10618136.md#1">在线课程：九个学习技巧</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/5/16/n11262814.md#1">家庭作业并非多多益善</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/5/23/n11274794.md#1">学习努力成绩差 试试提取练习法</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/4/6/n12006625.md#1">五大实用策略 激励孩子学习兴趣</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/4/26/n12062614.md#1">成就顶尖人才 要的不只是名牌大学</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13609689.md#1">昆州增加幼托行业拨款 4万儿童受益</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/11/30/n9910984.md#1" target="_blank">文革中自杀的名人（1）人民日报总编邓拓</a></li><li><a href="https://github.com/alniap312/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank">303万人举报江泽民</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/27/n11481899.md#1" target="_blank">美严审迫害者签证 震慑中共 精英支持</a></li>
+<li><a href="https://github.com/upjkzu3674/www/blob/master/README.md?dfh#9" target="_blank">永恒的见证</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/18/n10066862.md#1" target="_blank">智效民：著名物理学家饶毓泰的悲剧</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/6/16/n8005208.md#1" target="_blank">美肿瘤学会收录法轮功延长癌患生命论文</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/alniap312/djy/blob/master/gb/20/2/14/n11869302.md#1">【命理】那些为皇帝看相算命的人</a></li>
-<li><a href="https://github.com/alniap312/djy/blob/master/gb/20/8/9/n12317099.md#1">疫情下意大利圣母雕像流血泪 引民众围观</a></li>
-<li><a href="https://github.com/alniap312/djy/blob/master/gb/20/6/1/n12153439.md#1">违背原著的查抄荣国府</a></li>
-<li><a href="https://github.com/alniap312/djy/blob/master/gb/20/8/6/n12310782.md#1">顺天意民心退位让国 隆裕太后获盛赞</a></li>
-<li><a href="https://github.com/alniap312/djy/blob/master/gb/20/8/7/n12313595.md#1">“女子无才便是德”究竟是什么意思</a></li>
-<li><a href="https://github.com/alniap312/djy/blob/master/gb/20/8/13/n12328807.md#1">【薇羽看世间】没有微笑权利？美国媒体病了</a></li>
-<li><a href="https://github.com/alniap312/djy/blob/master/gb/20/8/13/n12328973.md#1">【重播】川普8·13发布会：经济强势回归</a></li>
-<li><a href="https://github.com/alniap312/djy/blob/master/gb/20/8/14/n12329716.md#1">【拍案惊奇】传北戴河八精神？备打仗备粮荒</a></li>
-<li><a href="https://github.com/alniap312/djy/blob/master/gb/20/8/12/n12325133.md#1">遵美禁令 在港中资银行对林郑等采取措施</a></li>
-<li><a href="https://github.com/alniap312/djy/blob/master/gb/20/8/12/n12325861.md#1">栗战书之女被曝在香港坐拥千万美元别墅</a></li>
-<li><a href="https://github.com/alniap312/djy/blob/master/gb/20/8/12/n12324381.md#1">马英九称共军攻台“首战即终战”遭学者驳斥</a></li>
-<li><a href="https://github.com/alniap312/djy/blob/master/gb/20/8/12/n12324696.md#1">罗霈颖死因出炉 为生前服用多种药物意外致死</a></li>
-<li><a href="https://github.com/alniap312/djy/blob/master/gb/20/8/13/n12329177.md#1">网传崔永元在北京家中昏迷 急送医院抢救</a></li>
-<li><a href="https://github.com/alniap312/djy/blob/master/gb/20/8/12/n12326221.md#1">11年前曾想回土耳其 吴凤讲述留在台湾原因</a></li>
-<li><a href="https://github.com/alniap312/djy/blob/master/gb/20/8/11/n12323294.md#1">与其他九人遭港警逮捕 周庭获日本艺文界声援</a></li>
-<li><a href="https://github.com/alniap312/djy/blob/master/gb/20/8/11/n12323627.md#1">曾许愿妹妹投胎当女儿 具荷拉哥哥的女儿降生</a></li>
-<li><a href="https://github.com/alniap312/djy/blob/master/gb/20/8/12/n12326290.md#1">咖啡喝多伤肾 带来这些症状！4类人不宜喝</a></li>
-<li><a href="https://github.com/alniap312/djy/blob/master/gb/20/8/11/n12323815.md#1">颈后凸一个大包？4个动作舒缓水牛肩</a></li>
-<li><a href="https://github.com/alniap312/djy/blob/master/gb/20/8/11/n12321930.md#1">非洲矿工挖出三块罕见宝石 拟变卖后建学校</a></li>
-<li><a href="https://github.com/alniap312/djy/blob/master/gb/20/8/13/n12327428.md#1">龙卷风袭击内蒙古 瞬间天黑 上百蒙古包倒塌</a></li>
-<li><a href="https://github.com/alniap312/djy/blob/master/gb/20/8/13/n12327637.md#1">惊人画面：大白鲨为捕食跃出海面4.6米</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13605590.md#1">【未解之谜】地球磁极倒转进行中??</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/17/n13582752.md#1">【奇事】两位卜算大师看出对方死期 但两人皆无法避过</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614863.md#1">《梁祝》小提琴协奏曲</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13616638.md#1">【十字路口】蓬佩奥到访台湾意义重大？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615200.md#1">吴明德：中共暗撑俄侵乌 恐成国际大输家</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607661.md#1">【更新2.27】乌总统：接下来24小时至关重要</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610320.md#1">乌克兰用无人机摧毁俄导弹系统 视频曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609576.md#1">俄银行被切断SWIFT系统 中共角色更尴尬</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614888.md#1">赴韩拍戏皮肤长满红斑 范冰冰素颜照吓坏网友</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612216.md#1">港星吴孟达过世一周年 长眠大马原因曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614510.md#1">香港TVB艺人祝文君罹癌离世 终年55岁</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607140.md#1">睡眠十大好处 提高脑力、抗衰老都在内</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13608014.md#1">多吃橙色食物 不只护眼 还有这些强大好处</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613932.md#1">【健康1+1】染Omicron出现脑雾 一方法2周解除</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/alniap312/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/alniap312/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/8/14/n12330812.htm">五个技巧为学习加速</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/8/14/n12330812.htm">五个技巧为学习加速</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://www.szzd.org/v.php?action=qrcode&url=https://github.com/alniap312/djy/blob/master/gb/20/8/14/n12330812.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/alniap312/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/alniap312/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/alniap312/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/alniap312/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/alniap312/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/alniap312/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/alniap312/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/alniap312/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/alniap312/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/alniap312/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/alniap312/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/alniap312/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/alniap312/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/alniap312/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/alniap312/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/alniap312/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/alniap312/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/alniap312/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/alniap312/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/alniap312/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/alniap312/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/alniap312/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/alniap312/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/alniap312/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/alniap312/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/alniap312/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/alniap312/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/alniap312/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/alniap312/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/alniap312/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/alniap312/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/alniap312/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/alniap312/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/alniap312/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/alniap312/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/alniap312/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/alniap312/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/alniap312/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/alniap312/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/alniap312/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/alniap312/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/alniap312/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/alniap312/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/alniap312/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/alniap312/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/alniap312/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/alniap312/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/alniap312/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hxcaik307/djy/blob/master/gb/20/8/14/n12330812.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
